--- a/server_playbook.yml
+++ b/server_playbook.yml
@@ -3,28 +3,32 @@
   remote_user: root
   
   tasks:
-    - user:
+    - name:
+      user:
         name:
         comment: ""
         group:
         shell: /bin/bash
         system:
             
-    - user:
+    - name:
+      user:
         name:
         comment: ""
         group:
         shell: /bin/bash
         system:
 
-    - file:
+    - name:
+      file:
         path: /etc/ansible/hosts
         state: file
         owner: root
         group: root
         mode: 0644
 
-    - file:
+    - name:
+      file:
         path: "/etc/ansible/{{item}}"
         state: file
         owner: root
@@ -39,7 +43,8 @@
         - pkgs
         - pkgsinfo
     
-    - git:
+    - name: clone munkireport github repo
+      git:
         repo: 'https://github.com/jacobfgrant/lotus.git'
         dest: /root/lotus/
         clone: yes
