Add handlers to Ansible playbooks
Adds handlers to restart web services (e.g., nginx and php) if any
changes are made to their configuration files. By using handlers, these
services will only be restarted iff changes are made to their config
files, and they will not simply be restarted each time the playbook
is run.

--- a/munki_playbook.yml
+++ b/munki_playbook.yml
@@ -64,10 +64,16 @@
         group: root
         mode: 0644
         backup: yes
+      notify:
+        - restart nginx
     
-    -
-    
-    
-    
-    
-    
+    - name: ensure nginx is running
+      service:
+        name: nginx
+        state: started
+        
+  handlers:
+    - name: restart nginx
+      service:
+        name: nginx
+        state: restarted
