--- a/munki_playbook.yml
+++ b/munki_playbook.yml
@@ -58,14 +58,23 @@
     
     - name: apply nginx sites-available template
       template:
-        src: /root/lotus/templates/munki/munki_sites-available_default
-        dest: /etc/nginx/sites-available/default
+        src: /root/lotus/templates/munki_sites-available
+        dest: /etc/nginx/sites-available/munki
         owner: root
         group: root
         mode: 0644
         backup: yes
+
+    - name: remove default from nginx sites-enabled
+      file:
+        path: /etc/nginx/sites-enabled/default
+        state: absent
     
-    -
+    - name: add munki to nginx sites-enabled
+      file:
+        src: /etc/nginx/sites-available/munki
+        dest: /etc/nginx/sites-enabled/munki
+        state: link
     
     
     
