--- a/command-server.yml
+++ b/command-server.yml
@@ -1,21 +1,14 @@
 ---
 - hosts: command
   remote_user: root
-  #vars:
-      #lotus_user_name: johndoe
-      # Used for testing
-      #dynamic_hosts_script = digitalocean_dynamic_hosts.py
   
   tasks:
     - name: set up user account
       user:
-        name: lotus # "{{ lotus_user_name }}"
-        #comment: ""
+        name: lotus
+        comment: "Lotus User"
         groups: sudo
         shell: /bin/bash
-        generate_ssh_key: yes
-        #ssh_key_bits: 2048
-        #ssh_key_file: ~/.ssh/id_rsa
         
     - name: update/upgrade packages
       apt:
@@ -34,53 +27,55 @@
         - python
         - python-pip
         - software-properties-common
+        - unzip
     
     - name: install required pip packages
       pip:
         name:
           - requests
         state: latest
-    
-    - name: clone lotus github repo
-      git:
-        repo: 'https://github.com/jacobfgrant/lotus.git'
-        dest: /root/lotus/
-        clone: yes
-        update: yes
 
     - name: copy dynamic hosts file
       copy:
-        src: "/root/lotus/dynamic_hosts/dynamic_hosts_scripts/{{ dynamic_hosts_script }}"
+        src: /root/lotus/dynamic_hosts/dynamic_hosts_scripts/dynamic_hosts.py
         dest: /etc/ansible/dynamic_hosts.py
         owner: root
         group: root
         mode: 0755
+
+    - name: copy Ansible config file
+      copy:
+        src: /root/lotus/ansible.cfg
+        dest: /etc/ansible/ansible.cfg
+        owner: root
+        group: root
+        mode: 0755
+        backup: yes
     
     - name: remove bootstrap cron.d job
       file:
         path: /etc/cron.d/cron_bootstrap
         state: absent
     
-    # Command server cron job -- every 5 minutes
     - name: set up command playbook cron job
       cron:
         name: "Run command playbook"
-        minute: "*/5" # Runs every five minutes
+        minute: "*/5"
         state: present
-        job: "ansible-playbook /lotus/server_playbook.yml"
+        job: "ansible-playbook /lotus/command-server.yml"
     
     # Munki server cron job
     - name: set up munki playbook cron job
       cron:
         name: "Run munki playbook"
-        minute: "30" # Runs every hour
+        minute: "*/10"
         state: present
-        job: "ansible-playbook /lotus/munki_playbook.yml"
+        job: "ansible-playbook /lotus/munki.yml"
     
     # MunkiReport server cron job
     - name: set up munkireport playbook cron job
       cron:
         name: "Run munkireport playbook"
-        minute: "0" # Runs every hour
+        minute: "*/10"
         state: present
-        job: "ansible-playbook /lotus/munkireport_playbook.yml"
+        job: "ansible-playbook /lotus/munkireport.yml"
