--- a/ansible/roles/command/tasks/main.yml
+++ b/ansible/roles/command/tasks/main.yml
@@ -30,7 +30,7 @@
 
 - name: download Lotus repo
   unarchive:
-    src: https://example.com/{{ lotus_version }}.zip
+    src: "https://github.com/jacobfgrant/lotus/archive/{{ lotus_version }}.zip"
     dest: /root/lotus
     remote_src: True
 
